--- a/app/src/main/res/layout/activity_next.xml
+++ b/app/src/main/res/layout/activity_next.xml
@@ -10,7 +10,9 @@
         android:id="@+id/textActivity"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textSize="30dp" />
+        android:textSize="30sp"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toStartOf="parent"/>
 
     <TextView
         android:id="@+id/textApplicaation"
